41.2 + libical 3.0.13 - Still wrong timzeone
- Up-top-date Fedora 35
- Gnome-calendar 41.2
- libical 3.0.13
Milan asked me to move this into its own issue.
Consider the following event: Untitled
It should be imported at 14:00 UTC+1.
When importing the event into my remote Google calendar, it gets correctly imported at 14:00 UTC+1. However, when importing it into the local "Personal" calendar, it gets incorrectly imported at 15:00 UTC+1. For Milan, it seems to be always imported a at 15:00 UTC+1.
This happens in both the flatpak as well as the Fedora rpm (both are gnome-calendar 41.2 + libical 3.0.13).
Edited by Björn Daase